   * the primary unit can be accessed in filter using $_primary_unit
   * the secondary unit can be accessed in filter using $_secondary_unit
   * added support for random_start_time in [scenario] (feature request #8024)
   * extended label to support team only and colors
   * gender-specific forms for trait names are now possible.
 * sound
   * add advanced sound tab to pref allowing you to play with sample_rate and buffer_size options
 * misc:
   * --validcache runtime switch to force assumption that cache is valid
   * add two new debug command set_var and show_var to check variables within
     the game easily
   * better handling of SDL_ListModes return code (no user impact)
   * first turn of a game is saved again (fixes bug #7909 and bug #8117)

Version 1.2:
 * campaigns:
   * Two Brothers:
     * updated portraits for Arne nad Bjarn
   * Under the Burning Suns:
     * changed some maps to fix glitches
     * fixed some image paths
     * new naga hunter portrait from Ranger M
     * uses the new lava transitions
 * graphics:
   * terrain:
     * new ice transition
     * modified swamp color
   * units:
     * new team-colored base-frames: grand marshal, human assassin, sergeant
     * halos for elvish shaman line attacks
     * new lightning bolt for Delfador
     * new fireball attack
     * new attack icons for wose crush and troll hammer
   * misc:
     * new icons for preferences
     * updated hex grid
 * language and i18n:
   * new man pages: Russian
   * updated translations: Catalan, Dutch, French, German, Greek, Italian,
     Norwegian, Russian, Slovenian
   * updated DejaVuSans font to 2.13
 * multiplayer maps:
   * revised maps: Blitz, Charge, Den of Onis, Hornshark Island, 4p Morituri,
     Meteor Lake, Lagoon
 * multiplayer
   * fixed some automove bugs (bug #7494 and bug #7251)
   * fixed passing controller in mp campaign (bug #7936)
   * added help strings so that long map names can be read from the MP Create
     screen