@@ -175,6 +175,7 @@ Detailed changelog and internal changes:
    * added support for random_start_time in [scenario] (feature request #8024)
    * extended label to support team only and colors
    * gender-specific forms for trait names are now possible.
+   * seting a WML variable to a random value now works correctly in MP games
  * sound
    * add advanced sound tab to pref allowing you to play with sample_rate and buffer_size options
  * misc:
